tdf#118635 relative checkbox disabled on reopen

Change-Id: Ic52737e5122b1ae37390061a5f7cf17b69e7e665